# optcg

./: .gitignore  README.md  pyproject.toml  requirements.txt
optcg/: __main__.py  cli.py  config.py  db.py  export.py  export_html.py  models.py  portfolio.py  search.py  tui.py
optcg/scrapers/: cardmarket.py  ebay.py  slugs.py
