[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "optcg"
version = "0.1.0"
description = "One Piece TCG investment portfolio tracker"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "curl_cffi>=0.7",
    "cryptography>=41.0",
    "questionary>=2.0",
]

[project.scripts]
optcg = "optcg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["optcg*"]
